Revision history for Perl module RT::Client::REST

0.43
  Miquel Ruiz <mruiz@cpan.org>
    - Added support for groups via new class RT::Client::REST::Group
      Tests and examples also added.
  Roman Plesll <RPLESSL@cpan.org>
    - Fix for ticket merges (RT #62405)
  Stuart Browne <stuart.browne@ausregistry.com.au>
    - Accept question mark in custom field names (RT #70631)
  T Pascal <t_pascal@zennet.com>
    - Patch for different link types (RT #68673)
  Jose Luis Martinez <jlmartinez@capside.com>
    - Skip timeout tests on Windows (RT #70225, RT #35770)
    - Fix 'priveleged' (renamed to 'privileged') method on RT::Client::REST::User
    - Add missing disabled, nickname, lang, contactinfo and signature methods to
      RT::Client::REST::User
    - Clean up the API for retrieving links. Patch from T.Pascal is missing some
      cases like links that are URLs. This feature is not documented as it's
      considered experimental.
    - Refactor login method to accept any type of field name (not just username
      and password)

0.42
  False release. See 0.43
  - support for groups via new class RT::Client::REST::Group
  - Fix for ticket merges
  - Accept question mark in custom field names

0.41
  Tomas Doran <bobtfish@bobtfish.net>
 - Make version number a string to avoid length of version number changing
   at 0.X0 releases (as this breaks distro packages)
 - Update META.yml to the 0.4 META spec.
 - Include repository metadata to make it easier for people to contribute
   to the module.
 - Change from ExtUtils::MakeMaker to Module::Install (I'm sure you can
   generate the correct information with EU::MM, I just don't know how
   offhand).
 - Add Test::More as a test_requires to help distros which split it out
   of their core perl package (RT#45150)

0.40 
  Jerrad Pierce <jpierce@cpan.org>
  - #38710, more user attributes
  - #39868 & #42391, Alter CF parsing to accomodate 3.8 as well as 3.6
	This required tweaks to Forms as well as Object.